cleanup cmake; default to RELEASE; add pip install

--- a/scancontext/CMakeLists.txt
+++ b/scancontext/CMakeLists.txt
@@ -1,7 +1,5 @@
-project(scancontext_src)
-
-add_library(scancontext SHARED 
-  include/scancontext/Scancontext.cpp 
+add_library(scancontext SHARED
+  include/scancontext/Scancontext.cpp
 )
 
 target_include_directories(scancontext PUBLIC
@@ -10,9 +8,12 @@ target_include_directories(scancontext PUBLIC
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
+set_target_properties(scancontext PROPERTIES VERSION ${PROJECT_VERSION})
+target_compile_definitions(scancontext PUBLIC PROJECT_VERSION="${PROJECT_VERSION}")
+
 target_link_libraries(scancontext 
-  Eigen3::Eigen 
-  nanoflann::nanoflann 
+  Eigen3::Eigen
+  nanoflann::nanoflann
 )
 
 add_library(Scancontext::scancontext ALIAS scancontext)
